Fix nav dropdown click on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -894,7 +894,8 @@ input:checked + .toggle-slider::after { transform: translateX(18px); }
   z-index: 200;
 }
 
-.nav-dropdown:hover .nav-dropdown-menu {
+.nav-dropdown:hover .nav-dropdown-menu,
+.nav-dropdown.open .nav-dropdown-menu {
   display: block;
 }
 
